[package]
name = "lyak_verb"
version = "0.1.0"
authors = ["Fredemus <frederik.halkjaer1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lyak_verb"
crate-type = ["cdylib"]
[dependencies]
vst = { git = "https://github.com/rust-dsp/rust-vst" }
rand = "0.8.3"
log-panics = "2.0.0"
hound = "3.4.0"